fixed header menu click on mobile

--- a/#source/scss/_index.scss
+++ b/#source/scss/_index.scss
@@ -132,10 +132,10 @@
 
 .services__item {
     width: 100%;
-    border-top: 1px solid #f1f1f1;
+    border-top: 1px solid #121212;
     margin: 0;
     background-color: transparent;
-    padding: 0 15px;
+    padding: 0 15px 20px;
 
     img {
         width: 100%;
